# IIoMT_repository

./: .gitignore  README.md  pyproject.toml  run_project.py
results/mi/: binary_mutual_information.csv  five_mutual_information.csv
results/ml/: binary_results.csv  five_class_results.csv
src/: __init__.py  constraints.py  file_utils.py  main.py
src/ml/: __init__.py  models.py  training.py
src/runners/: __init__.py  binary_dataset_runner.py  machine_learning_runner.py  main_runner.py  mutual_information_runner.py
