[project]
name = "iiomt-repository"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.5",
    "xgboost>=2.1.0",
    "tensorflow>=2.15.0,<=2.16.2",
    "optuna>=4.5.0",
]
